# replit-badger

./: .gitignore  .replit  Procfile  README.md  manage.py  pyproject.toml  replitrun.py  requirements.txt
app/: forms.py  views.py
replitBadger/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
